# esp32-nuts

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  esp32-flasher.json  partitions.csv  sdkconfig.defaults  standalone.ino
.github/workflows/: build.yml  pages.yml
docs/: BOOTSTRAP.md  CI.md  FLASH_LAYOUT.md  HARDWARE.md  NVS.md
docs/flasher/: index.html  manifest.bootstrap.json  manifest.full.json
emulator/esp32-nuts-emulator/: esp32-nuts-emulator.ino
main/: CMakeLists.txt  Kconfig.projbuild  hid_parser.c  hid_parser.h  idf_component.yml  main.c  nut_server.c  nut_server.h  ota_mgr.c  ota_mgr.h  ups_data.c  ups_data.h  ups_source.h  ups_usb.c  web_server.c  web_server.h  wifi_mgr.c  wifi_mgr.h
main/www/: index.html
scripts/: extract-partitions-from-bin.py  validate-esp32-flasher-json.py
